# django-hawkeye

./: .htaccess  CHANGELOG.md  README.md  error_log  profitsl_SaliyaPro.sql  pyproject.toml
app/Http/Controllers/: FrontendController.php
app/Http/Controllers/API/: DepositController.php  InvestmentPlanController.php  ReferralController.php  TwoFAVerificationController.php  UserAuthController.php  UserController.php
app/Http/Controllers/Admin/: BlogController.php  CommissionController.php  EmailConfigController.php  PageController.php  ProjectController.php  SupportTicketController.php  UsersController.php
app/Http/Middleware/: ApiKyc.php
app/Http/Resources/: DepositResource.php  PayoutResource.php  PlanInvestResource.php  ProjectInvestResource.php
app/Models/: Admin.php
app/Rules/: PhoneLength.php
app/Services/: BasicService.php
app/Traits/: Notify.php  PaymentValidationCheck.php  Translatable.php
app/app/Helpers/: helpers.php
app/app/Traits/: ApiResponse.php  Notify.php
assets/upload/: BnZzG4xnLL501ZcTfXLfx10KrFSw3d.avif
assets/upload/logo/: cJvqHEOE1jX77ciAvRI4wuJUOMygTL.avif
assets/upload/pagesImage/: 1LWDByAkpMwDcFy37Og3hx94pEApX5.avif
routes/: admin.php
sample_project/: pyproject.toml
sample_project/article/: models.py
sample_project/article/management/commands/: search.py  seed_articles.py
sample_project/article/migrations/: 0001_initial.py
sample_project/config/: settings.py
src/django_hawkeye/: __init__.py
src/django_pg_textsearch/: __init__.py  mixins.py
tests/integration/: test_search.py
(+45 files in other folders)
